# ChangeLog for app-accessibility/gnome-mag
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/gnome-mag/ChangeLog,v 1.169 2010/02/14 22:56:36 eva Exp $

*gnome-mag-0.16.0 (14 Feb 2010)

  14 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-mag-0.15.6.ebuild, -gnome-mag-0.15.7.ebuild,
  -gnome-mag-0.15.8.ebuild, +gnome-mag-0.16.0.ebuild:
  Version bump. Add dbus interface.

  17 Jan 2010; Jeroen Roovers <jer@gentoo.org> gnome-mag-0.15.9.ebuild:
  Stable for HPPA (bug #281427).

*gnome-mag-0.15.9-r1 (15 Jan 2010)

  15 Jan 2010; Romain Perier <mrpouet@gentoo.org>
  +gnome-mag-0.15.9-r1.ebuild,
  +files/gnome-mag-0.15.9-magnifier-fix-warnings.patch:
  Fix some ugly warnings, originally per upstream bug #578798.

  03 Dec 2009; Brent Baude <ranger@gentoo.org> gnome-mag-0.15.9.ebuild:
  Marking gnome-mag-0.15.9 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> gnome-mag-0.15.9.ebuild:
  alpha/ia64/sparc stable wrt #281427

  24 Oct 2009; nixnut <nixnut@gentoo.org> gnome-mag-0.15.9.ebuild:
  ppc stable #281427

  17 Oct 2009; Markus Meier <maekke@gentoo.org> gnome-mag-0.15.9.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> gnome-mag-0.15.9.ebuild:
  Stable on amd64, bug #281427

*gnome-mag-0.15.9 (03 Oct 2009)

  03 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-mag-0.15.9.ebuild:
  Version bump. Translation updates.

*gnome-mag-0.15.8 (02 Aug 2009)

  02 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-mag-0.15.8.ebuild:
  Version bump. Fix dependencies since we miss libcolorblind.

*gnome-mag-0.15.7 (09 Jul 2009)

  09 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-mag-0.15.4.ebuild, -gnome-mag-0.15.5.ebuild,
  +gnome-mag-0.15.7.ebuild:
  Version bump. Includes cleanup, translation updates. Clean up old
  revisions.

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> gnome-mag-0.15.6.ebuild: