@@ -4,15 +4,17 @@ Hash: SHA1
 AUX gnome-mag-0.15.9-magnifier-fix-warnings.patch 2464 RMD160 236670336325d6318595e1999521644da84d251d SHA1 41f9e3097457b08a93b55365d5f9feab19085e8f SHA256 ef62077efcef36a8960d5e9b369fe042fec9459317ac25c6b837db9e922f1859
 DIST gnome-mag-0.15.9.tar.bz2 532685 RMD160 b246e5d3eb8d2817287f7a54d10d3e17f7e24550 SHA1 b04c6728f8998d476ce1cb39734e72ca02d68bf5 SHA256 6f921419143088587dce201afd972a60317ade269e47b0d67a38872a7615a025
 DIST gnome-mag-0.16.0.tar.bz2 551669 RMD160 4c4b501d22f4d6bf815d058dbb7ae70d67a731e3 SHA1 dc8c2e63278c3e8ba7a3657dac6348f85b1e5b97 SHA256 15fb6a7198a707aea31d73aa95e697f857ca7435b65a8cc4bc25aa1484152c75
+DIST gnome-mag-0.16.1.tar.bz2 546444 RMD160 be70383eb4321478cd72b56f8ae0f22aa74e8bad SHA1 a7629cf9ce7c8a065de806c8fb7bd7f536a1d647 SHA256 92541c30a70a6cf59ec3fb3f46d27a598173984f786f7c6bc1bd3e4be65ad3fa
 EBUILD gnome-mag-0.15.9-r1.ebuild 1486 RMD160 7e87263a28a740f52895d2259746aa1979396de2 SHA1 f7c113d1c602fc59ac1f2bf85c6ba09cb6ec6dcc SHA256 6d7209b345a7b7b1a3db5b094fdddf44b1911b7e823d63c6b326b54ac5d28ff8
 EBUILD gnome-mag-0.15.9.ebuild 1307 RMD160 bf83778ef1f252ae58a11e6beb24dac454828d8c SHA1 54d2dd91d018d9e251e2c99357232df028c33ffc SHA256 5b81a81ba475377d886605c1134f51a05318924e0aedb3fab2d00bbe8f87f953
 EBUILD gnome-mag-0.16.0.ebuild 1858 RMD160 b6c711f2a42ea4539b3930ed973fa0ffedef5992 SHA1 11c39ba5a060c53a3266f2063639cf22cede4c59 SHA256 5b3e5a9812d41b4580cc1f39197058c5c23a3cd9ea3a871e746c6cbcaa1d4eb5
-MISC ChangeLog 21263 RMD160 bd007bb9ec80b9182045e64e6a66eb51002f9b2e SHA1 936e3816f48e1210853e976ee4332d4453d3f9f0 SHA256 d312cd607587e5d291a0abbf44741b5486720c5c0b9a3a7e4a4e14e1ba2d97c5
+EBUILD gnome-mag-0.16.1.ebuild 1858 RMD160 d386206aefb0652b2f45c5810f59510c602a2757 SHA1 b9d44df4cb84d0fa6fabfe1132731ecb69c787c5 SHA256 2cbb9478bd7a2c79a8c8eb9392ce0d6db9af3f473a5286d9a8960ecbcea137a8
+MISC ChangeLog 21439 RMD160 6e840e555d99f95434569cb44c302b247bd52e44 SHA1 db35e28f03988b1e74b9682842484e280eb546b2 SHA256 4934240b2cab12b1f26c3a8bbfb4ed3870c9f39e9543953f08d409aea7bfb3fb
 MISC metadata.xml 172 RMD160 6901d426a49e26089e240a7a4f990204e08c15a1 SHA1 2a33de77ba2f0f4fdedeed148abdad125b78f996 SHA256 f14db6f3dc189eb3e4a3478d7c1bead86fe077d0c756b8426b64f7fc0d42d228
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt4f8IACgkQ1fmVwcYIWAafOACg5/zW5SBMZVF5+Npozn2BCwMI
-MjsAoI8Wz78u2rPDbY47xRgUiAasaJey
-=R+jh
+iEYEARECAAYFAkuz2V8ACgkQ1fmVwcYIWAa6QACgm/wcSnDdLhOFcj9gpgJRx29a
+xQgAoOY/mZ4sH9jCT4GEITAeyREeuyda
+=Dtqj
 -----END PGP SIGNATURE-----
